@startuml
' Aggregate: Payments
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

enum PaymentStatus #FEF9E7 {
  Pending
  Paid
  Failed
}

class Payment <<AggregateRoot>> #D4E6F1 {
  +OrderId: Guid
  +Method: PaymentMethod
  +Status: PaymentStatus
  +Amount: Money
  +TransactionId: string?
  +PaymentUrl: string?
  +PaidAt: DateTime?
  +CreatedAt: DateTime
  ..
  +SetPaymentUrl()
  +MarkAsPaid()
  +MarkAsFailed()
}

enum PaymentMethod #FEF9E7 {
  LinePay
  PayPal
}

class PaymentPaidEvent <<DomainEvent>> #FDEDEC {
  +PaymentId: Guid
  +OrderId: Guid
  +TransactionId: string
}

class PaymentFailedEvent <<DomainEvent>> #FDEDEC {
  +PaymentId: Guid
  +OrderId: Guid
}

' --- Inheritance ---
Payment --|> AggregateRoot

' --- Composition ---
Payment --> PaymentMethod
Payment --> PaymentStatus

' --- Domain Events ---
Payment ..> PaymentPaidEvent : raises
Payment ..> PaymentFailedEvent : raises

@enduml